// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScrollableContainer /> by default matches with snapshot 1`] = `
<div
  className="sc-bdVaJa mTdHm sc-bwzfXH hdTEGE"
>
  <div
    className="sc-htpNat hjloYx"
  />
</div>
`;

exports[`<ScrollableContainer /> with children matches with snapshot 1`] = `
<div
  className="sc-bdVaJa mTdHm sc-bwzfXH hdTEGE"
>
  <div
    className="sc-htpNat hjloYx"
  >
    <nav>
      <ul>
        <li>
          Item 1
        </li>
        <li>
          Item 2
        </li>
        <li>
          Item 3
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`<ScrollableContainer /> with some props matches with snapshot 1`] = `
<div
  aria-hidden={true}
  className="sc-bdVaJa qHGnQ sc-bwzfXH hdTEGE custom__class"
>
  <div
    className="sc-htpNat QlUQZ"
  />
</div>
`;
